WIP: save local changes

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Inventory Management System — Web Demo</title>
+  <title>Juggernaut Investments Limited | Inventory Management System</title>
   <link rel="preconnect" href="https://cdn.jsdelivr.net"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
   <link rel="icon" href="./favicon.ico">
@@ -24,7 +24,8 @@
 <body>
   <main class="container">
     <header class="flex">
-      <h3><img src="src/assets/icon.iconset/icon_32x32@2x.png">Inventory Management System — Web Demo</h3>
+      <img src="/jil_inventory_backend/src/assets/icon.iconset/icon_32x32@2x.png" />
+      <h3>Juggernaut Investments Limited | Inventory Management System — Web Demo</h3>
       <div class="chips">
         <span id="chipLocations">—</span>
         <span id="chipItems">—</span>
