Web: add Export CSV and data caching, and stop seeding; only create tables when using Postgres

--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <div class="card">
-        <h4>Inventory</h4>
+        <h4>Inventory <button id="exportCsv" class="secondary" style="float:right;">Export CSV</button> </h4>
         <table>
           <thead>
             <tr>
