Fixed image filepath, added Excel downloading, updaetd web.js and main.py

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
 <body>
   <main class="container">
     <header class="flex">
-      <img src="/jil_inventory_backend/src/assets/icon.iconset/icon_32x32@2x.png" />
+      <img src="../src/assets/juggernaut-symbol.png" alt="Juggernaut" style="height:48px;vertical-align:middle;margin-right:8px;">
       <h3>Juggernaut Investments Limited | Inventory Management System — Web Demo</h3>
       <div class="chips">
         <span id="chipLocations">—</span>
